# LELA

./: .gitignore  Makefile.am  README  README.md  README_DEV_VERSION_MARTANI.txt  README_Faugere-Lachartre.md  aclocal.m4  configure.in
EXPERIMENTAL_CODE/: README.md
EXPERIMENTAL_CODE/BLOCK_DATA_TYPES/: README
EXPERIMENTAL_CODE/BLOCK_DATA_TYPES/FG-bloc/: Makefile.am  matrix-ops.C  matrix-ops.h  matrix-utils.C  matrix-utils.h  out  test-FG-bloc.C  types.h
EXPERIMENTAL_CODE/BLOCK_DATA_TYPES/FG-bloc-contiguous/: Makefile.am  matrix-ops.C  matrix-utils.C  matrix-utils.h  test-FG-bloc.C  types.h
EXPERIMENTAL_CODE/BLOCK_DATA_TYPES/FG-bloc-contiguous-hybrid/: Makefile.am  indexer.h  matrix-ops.C  matrix-ops.h  test-FG-bloc.C
EXPERIMENTAL_CODE/BLOCK_DATA_TYPES/FG-bloc-multiline-hybrid/: Allocator.h  Makefile.am  echelonize_multiline_bloc.C  echelonize_new.C  (+13 more)
EXPERIMENTAL_CODE/BLOCK_DATA_TYPES/FG-multiline-generic/: Makefile.am  multiline-indexer.h  test-FG-multiline.C  test-FG-multiline4.C
EXPERIMENTAL_CODE/BLOCK_DATA_TYPES/FG-multiline-generic/2lines/: FG-types.h  Makefile  Makefile.in  back_one_contiguous_array.txt  back_two_arrays_ok.txt  back_two_line_no_unroll.txt  back_unroll.txt  matrix-op-m.C  matrix-util-m.C  test-FG-multiline.C
EXPERIMENTAL_CODE/LEGACY_COMPLETE_VERSIONS/: README.md
EXPERIMENTAL_CODE/LEGACY_COMPLETE_VERSIONS/FG-multiline/: FG-types.h  Makefile.am  matrix-op-m.C  matrix-util-m.C  multiline-indexer.h  parallel.C  test-FG-multiline.C
EXPERIMENTAL_CODE/LEGACY_COMPLETE_VERSIONS/FGL-sparse-vector-version/: LELA-FG-util.C  Makefile.am  indexer.h  matrix-op.C  matrix-op.h  matrix-util.C  matrix-util.h  structured-gauss-lib.C  structured-gauss-lib.h  test-faugere-lachartre.C  test-splicer-indexer.C  test-structured-gauss.C
FAUGERE_LACHARTRE_final/: Allocator.h  Makefile.am  combine-abcd.py  consts-macros.h  indexer.h  indexer_parallel.h  level1-ops.C  level1-ops.h  level2-ops.C  level2-ops.h  level3-ops.C  level3-ops.h  level3Parallel.C  level3Parallel.h  level3Parallel_echelon.C  level3Parallel_echelon.h  matrix-utils.C  matrix-utils.h  structured-gauss-lib.C  structured-gauss-lib.h  test-FGL-parallel.C  test-FGL-seq.C  test-LELA-FGL-Blas.C  test-structured-gauss.C  types.h
FAUGERE_LACHARTRE_final/thrpool-0.8/test/: thrtest
FG-bloc/: indexer.h
FG-bloc-contiguous/: Makefile.am  out  test-FG-bloc.C
FG-bloc-contiguous-hybrid/: matrix-utils.C  types.h
FG-bloc-multiline/: Makefile.am  matrix-utils.C  test-FG-bloc.C
FG-bloc-multiline-hybrid/: .directory  matrix-ops-general-with-loop-unrolls-efficient.txt  matrix-ops.h  sub_D.pbm  sub_D2.pbm
FG-multiline/: FG-types.h  Makefile.am  matrix-op-m.C  matrix-util-m.C  matrix-util.h  multiline-indexer.h  run-all.sh  run-tests.sh  test-FG-multiline-only-D-with-dummy-data.C  test-FG-multiline-only-D.C  test-FG-multiline.C
FG-multiline-generic/: FG-types.h  test-FG-multiline.C  test-FG-multiline.C-pre
FG-multiline-generic/2lines/: Makefile.am  matrix-op.h  multiline-indexer.h
bloc-FG/: .kdev_include_paths  Makefile  Makefile.am  Makefile.am~  Makefile.in  bloc-types.h  bloc-types.h~  indexer.h  matrix-util.C  matrix-util.h  sdf  test-bloc-version.C  test-bloc-version.C~
doc/: Makefile  Makefile.in
final_FAUGERE_LACHARTRE/: Makefile.am  consts-macros.h  indexer_parallel.h  level2-ops.C  level2-ops.h  level3-ops.C  level3-ops.h  level3Parallel.C  level3Parallel.h  level3Parallel_echelon.C  matrix-op-m.C  matrix-utils.C  matrix-utils.h  monitor-mem-usage.sh  run-final-tests.sh  run-final-tests_2.sh  test-FGL-parallel.C  test-FGL-seq-64x64.C  test-LELA-FGL-Blas.C
final_seq_version/: Makefile.am  ThreadPool.h  indexer.h  indexer_parallel.h  kat16_FGL_b23.txt  level1-ops.C  level1-ops.h  level2-ops.C  level3-ops.C  level3Parallel_echelon.h  matrix-utils.C  matrix-utils.h  run-final-tests_1.sh  run-final-tests_1.sh~  run-final-tests_2.sh~  run-final-tests_3.sh~  run-multiline.sh  structured-gauss-lib.C  structured-gauss-lib.h  test-FGL-parallel.C  test-FGL-seq.C  test-Thread-Pool.C  test-structured-gauss.C  test_FGL_seq.back.txt  types.h
final_seq_version/bench_results/: output_kat13_FGL_onlyD.txt  output_kat13_FGL_rref.txt  output_kat13_new_only_D.txt  output_kat13_new_rref.txt  output_kat13_old_only_D.txt  output_kat13_old_rref.txt  output_mr996_FGL_onlyD.txt  output_mr996_FGL_rref.txt  output_mr996_fg-mline_CD_only_D.txt  output_mr996_fg-mline_CD_rref.txt  output_mr996_fg-mline_C_then_D_only_D.txt  output_mr996_fg-mline_C_then_D_rref.txt  output_mr996_new_only_D.txt  output_mr996_new_rref.txt  output_mr996_old_only_D.txt  output_mr996_old_rref.txt
final_seq_version/parallel/: echelon.C  echelon.C~  echelon.h  echelon.h~
final_seq_version/pool/: a.out  test.c  thr_pool.C  thr_pool.c  thr_pool.h  thr_pool.h.gch
final_seq_version/rm/: axpy.C
final_seq_version/thr_pool/: a.out  external.h  locksmith  thread_pool_test.c  threadpool.c  threadpool.h  threadpool.h.gch  threadpool.s
lela/: Makefile  Makefile.in  lela-config.h  lela-config.h.in  stamp-h1
lela/algorithms/: Makefile  Makefile.in  faugere-lachartre.tcc  faugere-lachartre.tcc~
lela/blas/: Makefile  Makefile.in  level3-cblas.h
lela/element/: Makefile  Makefile.in
lela/matrix/: Makefile  Makefile.in
lela/randiter/: Makefile  Makefile.in
lela/ring/: Makefile  Makefile.in
lela/solutions/: Makefile  Makefile.in
lela/util/: Makefile  Makefile.in  commentator.h  splicer.h
lela/vector/: Makefile  Makefile.in  sparse.h
macros/: Makefile  Makefile.in
new-faugere-lachartre/: LELA-FG-util.C  Makefile  Makefile.am  Makefile.in  README  a.out  indexer.h  matrix-op.C  matrix-op.h  matrix-op.lst  matrix-op.s  matrix-util.C  matrix-util.h  splicer-indexer-results.txt  structured-gauss-lib.C  structured-gauss-lib.h  test-faugere-lachartre.C  test-faugere-lachartre.C.back  test-faugere-lachartre.C~  test-splicer-indexer.C  test-structured-gauss.C
only-D/: matrix-op.C  matrix-op.h  matrix-util.C  matrix-util.h
tests/: Makefile  Makefile.in
tests/data/: Makefile  Makefile.in
util/: Makefile  Makefile.am  Makefile.in  support.C
(+29 files in other folders)
