# Copyright 2011 Bradford Hovinen
# 
# This file is part of LELA, licensed under the GNU General Public
# License version 3. See COPYING for more information.

SUBDIRS=lela util doc macros tests doc new-faugere-lachartre FG-multiline FG-bloc FG-bloc-contiguous FG-bloc-contiguous-hybrid FG-bloc-multiline FG-bloc-multiline-hybrid final_seq_version

ACLOCAL_AMFLAGS = -I macros

bin_SCRIPTS=lela-config

DISTCLEANFILES=_configs.sed

EXTRA_DIST=PROJECTS