# Copyright 2011 Bradford Hovinen
# 
# This file is part of LELA, licensed under the GNU General Public
# License version 3. See COPYING for more information.

SUBDIRS=lela util doc macros tests doc new-faugere-lachartre final_FAUGERE_LACHARTRE	\
	EXPERIMENTAL_CODE/BLOCK_DATA_TYPES/FG-bloc 				\
	EXPERIMENTAL_CODE/BLOCK_DATA_TYPES/FG-bloc-contiguous			\
	EXPERIMENTAL_CODE/BLOCK_DATA_TYPES/FG-bloc-contiguous-hybrid 		\
	EXPERIMENTAL_CODE/BLOCK_DATA_TYPES/FG-bloc-multiline 			\
	EXPERIMENTAL_CODE/BLOCK_DATA_TYPES/FG-bloc-multiline-hybrid 		\
	EXPERIMENTAL_CODE/LEGACY_COMPLETE_VERSIONS/FG-multiline

ACLOCAL_AMFLAGS = -I macros

bin_SCRIPTS=lela-config

DISTCLEANFILES=_configs.sed

EXTRA_DIST=PROJECTS